Update ul padding/margin and heading bottom margins

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2199,13 +2199,18 @@ body, button, input, select, textarea {
   -moz-osx-font-smoothing: grayscale; }
 
 h1, h2, h3, h4 {
-  font-family: 'Lato', sans-serif; }
+  font-family: 'Lato', sans-serif;
+  margin: 0 0 0.5em; }
 
 p {
   margin-bottom: 1.5em; }
 
 b, strong {
   font-weight: 600; }
+
+ul {
+  padding-left: 3em;
+  margin: 0 0 1.5em; }
 
 div:focus {
   outline: none; }
