--- a/assets/scss/_utility.scss
+++ b/assets/scss/_utility.scss
@@ -33,6 +33,12 @@ html {
 	margin-top: 0 !important;
 }
 
+/* Images */
+.thumb-size {
+	max-width: 250px;
+	height: auto;
+}
+
 /*--------------------------------------------------------------
 Buttons
 --------------------------------------------------------------*/
