--- a/assets/scss/breakpoints/_992up.scss
+++ b/assets/scss/breakpoints/_992up.scss
@@ -95,11 +95,6 @@ Footer
 /*--------------------------------------------------------------
 Blog
 --------------------------------------------------------------*/
-.single-post {
-	.site-content {
-		padding-top: 4.0em;
-	}
-}
 .blog {
 	article {
 		width: 33.333%;
@@ -109,6 +104,13 @@ Blog
 		&:nth-of-type(3n+4) {
 			clear: left;
 		}
+	}
+}
+
+/* Single */
+.single-post {
+	.site-content {
+		padding: 4.0em 0 2.0em;
 	}
 }
 
